--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.10",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.17.1",
     "playwright-core": "^1.50.1",
     "socket.io": "^4.8.3"
